--- a/index.2.html
+++ b/index.2.html
@@ -243,7 +243,7 @@
         link: "anime/Dan.html"
       },
        "Fairy tail  in english sub ": {
-        title: "Fairy tail  in Hindi all episodes ",
+        title: " Fairy tail  in english sub",
         cover: "photo/unnamed (7).jpg",
         link: "anime/fairy2.html"
        },
