--- a/index.html
+++ b/index.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="google-site-verification" content="p0QemVVXE7ylNB20f3L0xYlUMALMRVxDG2m6NusvxjE" />
-<meta name="description" content="Watch high-quality anime videos online with smooth playback, multiple themes, and full-screen support. Stream your favorite anime episodes for free.">
-<meta name="msvalidate.01" content="D5783728BBCBDB79D12DC95D61B107CE" />
+  <!-- Essential Meta -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Doosh Hub – Stream Anime in HD | Themes, Controls & More</title>
+  <meta name="description" content="Doosh Hub – Stream your favorite anime in HD with custom themes, smooth controls, and zero hassle. Watch anywhere, anytime.">
+  <link rel="canonical" href="https://www.dooshtoons.linkpc.net/" />
+
+  <!-- Google & Bing Verification -->
+  <meta name="google-site-verification" content="p0QemVVXE7ylNB20f3L0xYlUMALMRVxDG2m6NusvxjE" />
+  <meta name="msvalidate.01" content="D5783728BBCBDB79D12DC95D61B107CE" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Doosh Hub – Stream Anime in HD" />
+  <meta property="og:description" content="Stream your favorite anime from Muse India in vibrant quality with custom neon themes and smooth controls." />
+  <meta property="og:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
+  <meta property="og:url" content="https://www.dooshtoons.linkpc.net/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Doosh Hub – Stream Anime in HD" />
+  <meta name="twitter:description" content="Watch anime online legally with Doosh Hub. Built on Muse India sources with enhanced UI and themes." />
+  <meta name="twitter:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
+
+  <!-- Monetag & Ads -->
   <meta name="monetag" content="3f1e4f2b60d2dd5305688e79ae395482">
-  <title>DOOSH HUB</title>
-
-  <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- AdQuake Script -->
   <script async src="https://script.adquake.com/js/adquake.js" adquake-key="gxsBjEFJP0SDjW7Z7Iqqhg=="></script>
 
   <!-- Favicon -->
   <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" type="image/jpeg" sizes="32x32" />
 
-  <!-- Open Graph Meta -->
-  <meta property="og:title" content="DOOSH HUB - Your Anime Gateway!" />
-  <meta property="og:description" content="Explore the latest and greatest anime from Muse India with fire neon vibes on DOOSH HUB." />
-  <meta property="og:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
-  <meta property="og:url" content="https://www.dooshtoons.linkpc.net/" />
-  <meta property="og:type" content="website" />
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Twitter Card Meta -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="DOOSH HUB - Your Anime Gateway!" />
-  <meta name="twitter:description" content="Explore the latest and greatest anime from Muse India with fire neon vibes on DOOSH HUB." />
-  <meta name="twitter:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
-
+  <!-- Styles -->
   <style>
     @keyframes neonGlow {
       0%, 100% {
@@ -134,7 +139,7 @@
 
     <div class="flex justify-center gap-6">
       <a href="copyright.html" class="button">Copyright Info</a>
-      <a href="support.html" class="button">support us</a>
+      <a href="support.html" class="button">Support Us</a>
     </div>
   </div>
 
